# HackAI_Hack-230607

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  sample.env
src/: main.py  private_keys.json
src/agents/: response.py  server.py  user.py
src/frontend/: temperature.html
src/messages/: basic.py
src/utils/: app.py
src/utils/templates/: index.html
